Fixed z-index of the tooltip.

--- a/src/ui-scripts/tooltip/tooltip.css
+++ b/src/ui-scripts/tooltip/tooltip.css
@@ -1,7 +1,7 @@
 ﻿.tooltip-container
 {
   position: absolute;
-  z-index: 100;
+  z-index: 300;
   left: -5000px;
   background-color: #ececec;
   background-image: -o-linear-gradient(-90deg,
